switch() and stretch() added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,7 @@ export(chartHist)
 export(getIndicesOfMax)
 export(getLast)
 export(getSurfColors)
+export(matrixSwitch)
+export(stretch)
 export(sumPeriod)
+export(vectorSwitch)
