--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,11 @@ export(calcLogChanges)
 export(calcPercentChanges)
 export(calcPercentInsideInclusive)
 export(chartHist)
+export(checkLens)
+export(e)
 export(getIndicesOfMax)
 export(getLast)
 export(getSurfColors)
 export(matrixSwitch)
-export(stretch)
 export(sumPeriod)
 export(vectorSwitch)
