e() name is changed to getByIndex()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(calcPercentChanges)
 export(calcPercentInsideInclusive)
 export(chartHist)
 export(checkLens)
-export(e)
+export(getByIndex)
 export(getIndicesOfMax)
 export(getLast)
 export(getSurfColors)
