checkLens() is renamed to checkParams()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(calcLogChanges)
 export(calcPercentChanges)
 export(calcPercentInsideInclusive)
 export(chartHist)
-export(checkLens)
+export(checkParams)
 export(getByIndex)
 export(getIndicesOfMax)
 export(getLast)
