--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,12 @@ export(calcLogChanges)
 export(calcPercentChanges)
 export(calcPercentInsideInclusive)
 export(chartHist)
-export(checkParams)
+export(getAttribute)
 export(getByIndex)
 export(getIndicesOfMax)
 export(getLast)
+export(getLength)
+export(getLengths)
 export(getSurfColors)
 export(matrixSwitch)
 export(sumPeriod)
